--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="favicon.png" type="image/png" sizes="64x64">
+  <link rel="icon" href="images/icon.ico" type="image/x-icon">
   <title>懒猪的主页</title>
   <style>
     body {
