--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     h1 {
-      font-size: 1em;
+      font-size: 1.3em;
       margin-bottom: 10px;
     }
     h2 {
@@ -39,8 +39,13 @@
       margin-bottom: 10px;
       font-weight: lighter;
     }
+    h3 {
+      font-size: 0.9em;
+      margin: 5px 0;
+      font-weight: lighter;
+    }
     p {
-      font-size: 1em;
+      font-size: 0.9em;
       margin: 5px 0;
     }
     a {
@@ -63,10 +68,12 @@
     
     <!-- Steam链接 -->
     <!--<p><a href="我的Steam" target="_blank">我的Steam</a></p>-->
+
+    <h2>下面是我的联系方式:</h2>
     
     <!-- Icloud -->
     <p><a href="mailto:glazier-corn-8k@icloud.com">我的邮箱</a></p>
-    <h2>glazier-corn-8k@icloud.com</h2>
+    <h3>glazier-corn-8k@icloud.com</h3>
     </div>
 
 </body>
