添加一定的国际化

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/icon.ico" type="image/x-icon">
-  <title>懒猪的主页</title>
+  <title>Lazypig的主页</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
     <h2>下面是我的联系方式:</h2>
     
     <!-- Icloud -->
-    <p><a href="mailto:glazier-corn-8k@icloud.com">我的邮箱</a></p>
+    <p><a href="mailto:glazier-corn-8k@icloud.com">我的邮箱 MyEmail</a></p>
     <h3>glazier-corn-8k@icloud.com</h3>
     </div>
 
